--- a/index.html
+++ b/index.html
@@ -1,1 +1,150 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title> Christian Noa Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="images/logo.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
+    
+    <!-- Update these with your own fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/style.css">
+
+</head>
+
+<body>
+    <!-- Header -->
+    <header>
+        <div class="logo">
+            <a href="index.html"><img src="images/favicon.jpg" alt="Christian Noa Logo"></a>
+        </div>
+        <button class="nav-toggle" aria-label="toggle navigation">
+            <span class="hamburger"></span>
+        </button>
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="#services" class="nav__link">My services</a></li>
+                <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
+                <li class="nav__item"><a href="#work" class="nav__link">My work</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+    <!-- Introduction -->
+    <section class="intro" id="home">
+        <h1 class="section__title section__title--intro">
+            Hi, I am <strong>Christian Noa</strong>
+        </h1>
+        <p class="section__subtitle section__subtitle--intro">Software Engineer</p>
+        <img src="images/cn_profile.jpg" alt="a bio pic" class="intro__img">
+    </section>
+
+    <!-- My services -->
+    <section class="my-services" id="services">
+        <h2 class="section__title section__title--services">What I do</h2>
+        <div class="services">
+            <div class="service">
+                <h3>Software Engineer</h3>
+                <p>Get the most reliable and user-centric software solutions for your company using my design aesthetic in combination with different technologies. 
+                    I don't just build, I leverage a variety of technologies to help you grow from inception to deployment.  
+                </p>
+            </div> <!-- / service -->
+            <!--
+            <div class="service">
+                <h3>Graphic Design</h3>
+                <p>Top-notch visual communication is the cornerstone of your brand, it can refine your vision. 
+                    As a result-driven graphic designer, I can give your brand the competitive edge it deserves. Developing a brand identity has never been easier. 
+                </p>
+            </div> --> <!-- / service -->
+            <!--
+            <div class="service">
+                <h3>Blog</h3>
+                <p>Stay ahead of the latest trends by going through the articles, tips, and information about design and technology. 
+                    Read through the blog as I document my journey as a software engineer, a professional graphic designer, and a resuming student.
+                </p>
+            </div> -->  <!-- / service -->
+        </div>
+        <!--services-->
+
+        <a href="#work" class="btn">see my work</a>
+    </section>
+
+
+    <!-- About me -->
+    <section class="about-me" id="about">
+        <h2 class="section__title section__title--about">Who I am</h2>
+        <p class="section_subtitle section__subtitle--about">Software Engineer based out of NYC</p>
+
+        <div class="about-me__body">
+            <p>My name is Christian Noa and I am a Software Engineer based out of New York. I graduated from The Borough of Manhattan 
+                Community College in 2021 with an Associates Degree in Multimedia Programming and Design. Currently, I’m pursuing my Bachelors 
+                Degree in Computer Science at Florida International University with an expected graduation date of 2025.</p>
+            <p>For the past several years I have worked as a Graphic Designer for major companies including Fanatics and Tommy Hilfiger using softwares like Adobe Photoshop and Illustrator. Now I’m passionate about clean, efficient, elegant code 
+                using HTML, CSS, and JavaScript, coupled with Python and Java to design and develop websites and small web applications utilizing
+                these coding languages.</p>
+        </div>
+
+        <img src="images/christiannoa01.jpg" alt="Christian Bio Pose" class="about-me__img">
+    </section>
+
+    <!-- My Work -->
+    <section class="my-work" id="work">
+        <h2 class="section__title section__title--work">My work</h2>
+        <p class="section_subtitle section__subtitle--work">  Range of work</p>
+
+        <div class="portfolio">
+            <!-- Portfolio 1 -->
+            <a href="portfolio-item1.html" class="portfolio__item">
+                <img src="images/weatherapp.jpg" alt="Weather app" class="portfolio__img">
+            </a>
+
+            <!-- Portfolio 2 -->
+            <a href="portfolio-item2.html" class="portfolio__item">
+                <img src="images/countdowntimer.jpg" alt="Countdown timer" class="portfolio__img">
+            </a>
+
+            <!-- Portfolio 3 -->
+            <a href="portfolio-item3.html" class="portfolio__item">
+                <img src="images/portfolioSite.jpg" alt="To do list" class="portfolio__img">
+            </a>
+
+        </div>
+    </section>
+
+    <footer class="footer">
+        <a href="malito:christiannoa20@gmail.com" class="footer__link">christiannoa20@gmail.com</a>
+        <ul class="social-list">
+            <li class="social-list__item">
+                <a class="social-list__link" href="https://github.com/christiannoa" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
+            </li><!-- 
+            <li class="social-list__item">
+                <a class="social-list__link" href="https://instagram.com/cndesignsny" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link" href="https://twitter.com/cnodesigns20" target="_blank">
+                    <i class="fab fa-twitter"></i>
+                </a>
+            </li>
+            <li class="social-list__item">
+                <a class="social-list__link" href="https://www.linkedin.com/in/christiannoa/" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </li>-->
+        </ul>
+    </footer>
+
+    <script src="js/index.js"></script>
+
+</body>
+
+</html>
