--- a/portfolio-item2.html
+++ b/portfolio-item2.html
@@ -63,31 +63,31 @@
 
 
    <!-- Footer -->
-    <footer class="footer">
-        <a href="malito:cnoa@christiannnoa.com" class="footer__link">cnoa@christiannoa.com</a>
-        <ul class="social-list">
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://github.com/christiannoa" target="_blank">
-                    <i class="fab fa-github"></i>
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://instagram.com/cndesignsny" target="_blank">
-                    <i class="fab fa-instagram"></i>
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://twitter.com/cnodesigns20" target="_blank">
-                    <i class="fab fa-twitter"></i>
-                </a>
-            </li>
-            <li class="social-list__item">
-                <a class="social-list__link" href="https://linkedin.com/christiannoa" target="_blank">
-                    <i class="fab fa-linkedin"></i>
-                </a>
-            </li>
-        </ul>
-    </footer>
+   <footer class="footer">
+    <a href="malito:christiannoa20@gmail.com" class="footer__link">christiannoa20@gmail.com</a>
+    <ul class="social-list">
+        <li class="social-list__item">
+            <a class="social-list__link" href="https://github.com/christiannoa" target="_blank">
+                <i class="fab fa-github"></i>
+            </a>
+        </li><!-- 
+        <li class="social-list__item">
+            <a class="social-list__link" href="https://instagram.com/cndesignsny" target="_blank">
+                <i class="fab fa-instagram"></i>
+            </a>
+        </li>
+        <li class="social-list__item">
+            <a class="social-list__link" href="https://twitter.com/cnodesigns20" target="_blank">
+                <i class="fab fa-twitter"></i>
+            </a>
+        </li>
+        <li class="social-list__item">
+            <a class="social-list__link" href="https://www.linkedin.com/in/christiannoa/" target="_blank">
+                <i class="fab fa-linkedin"></i>
+            </a>
+        </li>-->
+    </ul>
+</footer>
 
     <script src="js/index.js"></script>
 
