--- a/portfolio-item3.html
+++ b/portfolio-item3.html
@@ -39,7 +39,7 @@
         <h1 class="section__title section__title--intro">
             <strong>Personal Site</strong>"Portfolio"
         </h1>
-        <p class="section__subtitle section__subtitle--intro"> www.christiannoa.com</p>
+        <p class="section__subtitle section__subtitle--intro">christiannoa.github.io</p>
         <img src="images/portfolioSite.jpg" alt="Project Title" class="intro__img">
     </section>
 
